[package]
name = "rproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.40"
arc-swap = "1.3.0"
bstr = "0.2.17"
env_logger = "0.9"
log = "0.4.14"
rand = "0.8.3"
structopt = "0.3.21"
futures = "0.3.5"
mobc-redis = "0.7.0"
mobc = "0.7.3"
fast-socks5 = "0.6.1"
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "fs"] }
